--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,11 @@ opentsdb:
   config:
     host: http://localhost
     port: 9070
-
+    httpConnectionPool: 100
+    httpConnectTimeout: 100
+    putConsumerThreadCount: 2
+    batchPutSize: 20000
+    batchPutBufferSize: 50
+    batchPutTimeLimit: 300
+    readonly: false
 debug: false
